# yuisub

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  poetry.toml  pyproject.toml
.github/workflows/: CI-test.yml  Release-pypi.yml  Release.yml
assets/: eng.srt
tests/: test_bangumi.py  test_llm.py  test_srt.py  test_sub.py  test_translator.py  util.py
yuisub/: __init__.py  __main__.py  a2t.py  bangumi.py  llm.py  prompt.py  srt.py  sub.py  sub_translator.py  translator.py
